# agents

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RETROSPECTIVE.md  V2-PROGRESS.md  admin-supervisor.sh  agent-config.py  agents-mcp-daemon.plist  agents.yaml  auto_dispatch.sh  claude.md  config_utils.py  daemon-watchdog.sh  docker-compose.cloud.yml  docker-compose.yml  install-admin-supervisor.sh  project.md  repair-agent.sh  restart_all_agents.sh  schedules-backup-20260406.yaml  setup-agents.py
apps/console/backend/: .gitignore  pyproject.toml
apps/console/backend/app/: __init__.py  db.py  main.py  pricing.py  repo.py
apps/console/backend/app/routes/: __init__.py  agents.py  briefs.py  cost.py  tickets.py  tmux.py  workspaces.py
apps/console/backend/tests/: test_smoke.py
services/agents-mcp/: .dockerignore  Dockerfile  pyproject.toml
services/agents-mcp/scripts/: orchestration_demo.py
services/agents-mcp/src/agents_mcp/: __init__.py  brief_responder.py  dispatcher.py  dispatcher_v2.py  leantime_client.py  morning_brief.py  orchestration_comment_dispatch.py  orchestration_session_manager.py  orchestration_tools.py  orchestration_tpm_dispatch.py  personal_mcp_registry.py  pr_monitor.py  profile_loader.py  proxy.py  server.py  session_manager.py  sqlite_task_client.py  store.py  usage.py
services/agents-mcp/src/agents_mcp/adapters/: __init__.py  base.py  claude_adapter.py
services/agents-mcp/src/agents_mcp/web/: api.py  bridge.py  events.py  orchestration_api.py  orchestration_events.py
services/agents-mcp/tests/: test_adapter_base.py  test_bridge.py  test_claude_adapter.py  test_dispatcher_reliability.py  test_fault_tolerance.py  test_message_filter.py  test_morning_brief.py  test_orchestration_api.py  test_orchestration_comment_dispatch.py  test_orchestration_events.py  test_orchestration_session.py  test_orchestration_tools.py  test_orchestration_tpm_dispatch.py  test_personal_mcp_registry.py  test_pr_monitor.py  test_profile_loader.py  test_project_root_detection.py  test_server_plumbing.py  test_session_manager.py  test_sqlite_task_client.py  test_staleness.py  test_store_schedules.py  test_ticket_dependencies.py  test_timeout.py  test_workspaces.py
services/agents-mcp/web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
services/agents-mcp/web/e2e/: agents.spec.ts  dashboard.spec.ts  feedback.spec.ts  messages-filter-screenshot.spec.ts  messages.spec.ts  navigation.spec.ts  tickets.spec.ts  websocket.spec.ts
services/agents-mcp/web/src/: App.tsx
services/agents-mcp/web/src/api/: agents.ts  messages.ts  onboarding.ts  tickets.ts
services/agents-mcp/web/src/components/: JournalPanel.tsx  Layout.tsx  Sidebar.tsx  StatusBadge.tsx  TokenUsage.tsx
services/agents-mcp/web/src/hooks/: useTheme.ts  useWebSocket.ts
services/agents-mcp/web/src/pages/: AgentDetail.tsx  Agents.tsx  Dashboard.tsx  Feedback.tsx  Messages.tsx  Onboarding.tsx  Schedules.tsx  TicketDetail.tsx  Tickets.tsx  Tokens.tsx
services/imessage-mcp/: README.md  pyproject.toml
services/imessage-mcp/src/imessage_mcp/: __init__.py  __main__.py  db.py  decoder.py  epoch.py  sender.py  server.py
services/imessage-mcp/tests/: test_db.py  test_decoder.py  test_epoch.py  test_sender.py
services/management-plane/: .env.example  Dockerfile  docker-compose.prod.yml  pyproject.toml
services/management-plane/scripts/: backup.sh  deploy.sh
services/management-plane/src/management/: __init__.py  app.py  auth.py  billing.py  db.py  instance_manager.py  models.py  nginx_config.py  security.py
services/management-plane/tests/: conftest.py  test_auth.py  test_companies.py  test_dashboard.py  test_instance_manager.py  test_nginx_config.py  test_security.py  test_usage.py
services/management-plane/web/: index.html  package-lock.json  package.json  vite.config.ts
services/management-plane/web/src/: App.tsx
services/wechat-mcp/: README.md  pyproject.toml
services/wechat-mcp/src/wechat_mcp/: __init__.py  __main__.py  applescript.py  ratelimit.py  reader.py  sender.py  server.py
services/wechat-mcp/tests/: test_applescript.py  test_ratelimit.py  test_reader.py  test_sender.py
(+271 files in other folders)
