[project]
name = "agents-mcp"
version = "0.1.0"
description = "Agents Essentials MCP — task management, auto-dispatch, and agent coordination"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "fastmcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "claude-agent-sdk>=0.1.72",
]

[project.scripts]
agents-mcp = "agents_mcp.server:main"
agents-mcp-proxy = "agents_mcp.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit a real LLM API (skipped by default; run with -m live)",
]
# Skip live-marked tests by default. Override with `pytest -m live`.
addopts = "-m 'not live'"

