[project]
name = "wechat-mcp"
version = "0.1.0"
description = "WeChat MCP — read & send WeChat for Mac via osascript UI automation (personal-agent only)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "fastmcp>=0.9.0",
]

[project.scripts]
wechat-mcp = "wechat_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
